--- a/font/config.json
+++ b/font/config.json
@@ -7,9 +7,9 @@
   "ascent": 850,
   "glyphs": [
     {
-      "uid": "554ee96588a6c9ee632624cd051fe6fc",
-      "css": "chart-pie",
-      "code": 61952,
+      "uid": "e99461abfef3923546da8d745372c995",
+      "css": "cog",
+      "code": 59393,
       "src": "fontawesome"
     },
     {
@@ -19,16 +19,24 @@
       "src": "fontawesome"
     },
     {
-      "uid": "5d2d07f112b8de19f2c0dbfec3e42c05",
-      "css": "spin5",
-      "code": 59448,
-      "src": "fontelico"
+      "uid": "8663320a860b00f26e94d3d15c9ba99a",
+      "css": "clock",
+      "code": 59394,
+      "src": "entypo"
     },
     {
-      "uid": "dpxunrtmigvk6jm0ieo7axfsgzx4awll",
-      "css": "cog",
-      "code": 59393,
-      "src": "typicons"
+      "uid": "6e649d3f836fb36ed756f59930214862",
+      "css": "rocket",
+      "code": 59392,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M398.8 121.5C426.4 81.5 456.1 40.2 498.3 14.6 540 39.6 569.4 80.1 596.6 119.4 660.8 216.6 700 333.3 692.1 450.6 712.8 468 734.1 484.7 754.6 502.4 783.9 529.3 797.6 571.4 790.5 610.5 780.7 659.8 771.2 709.3 760.8 758.5 755 783.9 720.8 795.5 700.6 779.3 667.2 751.4 634.6 722.4 601.1 694.5 575.8 718.8 542.2 735 507 737 466.4 739.9 426.2 723 396.7 695.5 372.7 713.9 350.5 735.9 327.1 755.6 315.7 764.7 306.3 776.6 292.9 782.9 272.1 791.8 245.4 778.5 240.7 756.1 230 708 218.8 660 208.4 611.8 200 571 214.9 526.6 246.3 499.2 264.5 484 283 469 301.5 454.1 306.7 451.4 304.1 445.2 304.4 440.6 298.8 327.4 337.5 215.5 398.8 121.5ZM431.6 270.6C407.4 301.8 410.3 350.2 438.4 378.1 468.2 410.9 524.7 412.1 555.8 380.6 579.9 358.6 588 321.7 576.5 291.4 566 262.2 537.9 240.2 506.9 237.5 478.3 234.2 448.6 247.4 431.6 270.6ZM387.2 796.5C386.8 782.3 404.5 772.6 416.4 780.1 466.9 806.1 529.8 806.1 580.3 780.1 591.9 772.9 609.1 781.5 609.5 795.3 609.7 825.4 609.7 855.6 609.5 885.8 609.8 900.5 590.3 909.9 578.9 900.7 570.2 893 562.4 884.4 554 876.3 540.8 902.1 528.3 928.3 514.9 954 508.5 966.3 488.5 966.3 482 954.2 468.6 928.4 456.2 902.1 442.7 876.4 434.4 884.5 426.6 893.1 417.9 900.7 406.5 910 387.1 900.4 387.3 885.8 387 856 387.2 826.3 387.2 796.5Z",
+        "width": 1000
+      },
+      "search": [
+        "rocket"
+      ]
     }
   ]
 }
